# hh_data_to_posgress

./: README.md  pyproject.toml
src/: dbmanager.py  main.py  utils.py
